Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38402

Bluez4: QBuetoothLocalDevice::connectedDevices() doesn't update internal connectedDevicesSet cache

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.1
    • 5.3.0 Beta1
    • None

    Description

      Call connectedDevices() multiple times and observe that the list is constant no matter how many connection changes have happened. The relevant signals are not emitted either.

      Attachments

        For Gerrit Dashboard: QTBUG-38402
        # Subject Branch Project Status CR V

        Activity

          People

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes