Bluez4: Fix incorrect list of connected devices in QBluetoothLocalDevice

ConnectionChange signals were never emitted for
remote devices which already existed at class instanciation time.

At the same time this patch removes the delayed creation of the
connectedDevices set. This simplifies the code and the caching did
not save much effort.

Task-number: QTBUG-38402
Change-Id: Ic871f919435c0d42ce2d79fd54f0da693816010a
Reviewed-by: Oleg Shparber <trollixx@gmail.com>
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>