src/bluetooth/qbluetoothlocaldevice_p.h
@@ -168,8 +168,6 @@ private:
 
     QBluetoothLocalDevice *q_ptr;
 
-    bool connectedCached;
-
     void initializeAdapter();
 };
 
